--- a/core-concepts/test-plans.mdx
+++ b/core-concepts/test-plans.mdx
@@ -1,7 +1,7 @@
 ---
 title: Test plans
 description: Test Plans allow you to organize and manage groups of test cases that can be executed together as a single unit.
-icon: 'clipboard-list'
+icon: "clipboard-list"
 ---
 
 ## Overview
@@ -53,9 +53,22 @@ Test Plans can be triggered programmatically through the API. For detailed infor
 
 You can configure Test Plans to run automatically at specific times or intervals:
 
-1. Navigate to the Results page
-2. Click the "Schedule" button
-3. Configure cron for the schedule and select Test plan
+<Steps>
+  <Step title="Navigate to Test Plans">
+    Go to [Test Plans](https://app.qa.tech/dashboard/current-project/test-plans)
+    in your project dashboard.
+  </Step>
+  <Step title="Select Test Plan">
+    Click on the test plan you want to schedule.
+  </Step>
+  <Step title="Manage Schedules">
+    Click on **Manage Schedules** within the test plan.
+  </Step>
+  <Step title="Add Schedule">
+    Add your cron schedule expression and a description, then click **Add
+    Schedule**.
+  </Step>
+</Steps>
 
 ### UI Execution
 
