Fix typo: 'An into to AI agents' → 'An intro to AI agents'

--- a/core-concepts/ai-agent-testing.mdx
+++ b/core-concepts/ai-agent-testing.mdx
@@ -1,6 +1,6 @@
 ---
 title: AI Agent Testing
-description: 'An into to AI agents, and how they are used for QA'
+description: 'An intro to AI agents, and how they are used for QA'
 icon: user-secret
 ---
 
