--- a/configuration/ip-access-control.mdx
+++ b/configuration/ip-access-control.mdx
@@ -1,39 +1,71 @@
 ---
 title: 'IP Access'
-description: 'Configure your ingress'
+description: 'Configure CDNs and firewalls to allow QA.tech testing traffic'
 icon: 'globe'
 ---
 
-## Whitelisting
+## Overview
 
-To permit traffic originating from QA.tech you need to add our IP addresses to your firewall rules. This process is called whitelisting, and is usually done by your security team.
+QA.tech's automated testing appears as bot traffic to CDNs and firewalls. To prevent blocking, you need to configure your CDN or firewall to allow traffic from QA.tech's IP addresses.
 
-## QA.tech IP range
+## QA.tech IP Addresses
 
-The current list of IPs that you need to whitelist can be found logged in to [QA.tech](https://app.qa.tech) under Configuration - Network.
+Find the current list of QA.tech IP addresses:
 
-Or by accessing https://app.qa.tech/api/outbound-ips
+- **In the app:** [QA.tech](https://app.qa.tech) → Settings → Network
+- **Direct access:** https://app.qa.tech/api/outbound-ips
 
-## Whitelisting IPs on Cloudflare to Avoid Captcha
+<Warning>
+IP addresses may change. Always use the current list from Settings → Network or the API endpoint above.
+</Warning>
 
-When using Cloudflare with your application, you may encounter captcha challenges for your automated tests or agents. To prevent this, you can whitelist our agent IPs on Cloudflare.
+## Cloudflare Configuration
 
-### Creating a WAF Rule for IP Whitelisting
+### Recommended: AI Crawl Control
 
-You can create a WAF (Web Application Firewall) rule to whitelist specific IPs:
+Cloudflare's [AI Crawl Control](https://developers.cloudflare.com/ai-crawl-control/) is designed for managing automated traffic like QA.tech testing.
+
+**Setup approach:**
+1. Identify QA.tech traffic in your AI Crawl Control dashboard (look for requests from QA.tech IP ranges during test execution)
+2. Create allow rules for QA.tech traffic patterns
+3. Monitor and adjust as needed
+
+**Why this works best:** Automatically manages bot traffic with built-in analytics and zero configuration for most users.
+
+### Alternative: WAF IP Rules
+
+If you need traditional IP whitelisting:
 
 1. Log in to your Cloudflare dashboard
-2. Navigate to the Security section
-3. Select WAF > Tools > IP Access Rules
-4. Add the agent IPs to the allowlist
+2. Navigate to Security → WAF → Tools → IP Access Rules
+3. Add QA.tech IP addresses to the allowlist
+4. Set action to "Allow"
 
-For more details, see the [Cloudflare documentation on IP Access Rules](https://developers.cloudflare.com/waf/tools/ip-access-rules/).
+For detailed steps, see [Cloudflare's WAF documentation](https://developers.cloudflare.com/waf/tools/ip-access-rules/).
 
-### Finding Agent IPs
+## AWS CloudFront Configuration
 
-You can always find the current agent IPs in the application:
+CloudFront blocking typically involves geographic restrictions, AWS WAF Bot Control, or signed URLs.
 
-1. Go to Settings > Network in the app
-2. Copy the listed IP addresses to use in your Cloudflare WAF rules
+**Common solutions:**
+- **AWS WAF Bot Control:** Add QA.tech IP ranges to your bot control allow rules
+- **Geographic restrictions:** Ensure QA.tech's operating regions aren't blocked
+- **Signed URLs/cookies:** Contact QA.tech support for integration guidance
 
-Whitelisting these IPs will ensure your automated processes can interact with your application without being blocked by captcha challenges.
+For detailed AWS setup, see [AWS WAF Bot Control documentation](https://aws.amazon.com/waf/features/bot-control/).
+
+## Other CDNs and Firewalls
+
+For other CDN providers or firewall systems, add QA.tech IP addresses to your allow/whitelist rules. Consult your provider's documentation for specific configuration steps.
+
+## Troubleshooting
+
+**Still seeing 403 errors or captcha challenges?**
+
+1. **Verify IP addresses are current** – QA.tech IPs may change; check Settings → Network
+2. **Check rate limiting rules** – QA.tech tests may trigger rate limits before allow rules apply
+3. **Review geographic restrictions** – Ensure no blanket blocks on QA.tech's operating regions
+4. **Wait for propagation** – CDN changes take 5-10 minutes to propagate globally
+5. **Test after changes** – Run a simple test to verify your configuration
+
+**Need help?** Contact QA.tech support with your CDN provider and error details.
