docs: add Microsoft Azure SSO support and MFA clarifications

--- a/configuration/authentication.mdx
+++ b/configuration/authentication.mdx
@@ -13,7 +13,7 @@ You can enable 2FA under Settings / Authentication
 
 ## Single Sign-On (SSO)
 
-QA.tech supports single sign-on to your dashboard via SAML. If you use Google Workspace, we have provider-specific documentation for setting up SSO, but if you use another provider, please contact us!
+QA.tech supports single sign-on to your dashboard via SAML, including Google Workspace, Microsoft Azure, Office 365, and university SSO systems. Your SSO provider must not have CAPTCHA enabled. 2FA works if you configure a Username + Password with 2FA config, though authenticator apps for MFA are not supported.
 
 <Note>
   SSO functionality is available on our enterprise plan. [Contact
