docs: remove limitations section and add continuous improvement message (QAT-4711)
- Removed 'What the Chat Assistant can't do yet' section to focus on capabilities
- Added positive Tip about continuous AI agent improvements
- Emphasizes evolving nature of tools and capabilities

--- a/core-concepts/ai-chat-assistant.mdx
+++ b/core-concepts/ai-chat-assistant.mdx
@@ -58,25 +58,6 @@ It can fetch information about your [GitHub pull requests](/configuration/github
 
 The assistant can search QA.tech's documentation to answer questions about platform features and capabilities, and provide you with contact information for customer support when you need help beyond what the AI can provide.
 
-
-## What the Chat Assistant can't do yet (we're adding new functionality often)
-
-**Browser Support**
-
-The assistant can only help you test on Chrome browser. However, you can configure different viewports, locales, and user agents through [test plans](/core-concepts/test-plans) to simulate different devices and regions.
-
-**Testing Types**
-
-It focuses exclusively on end-to-end browser testing. If you need API testing, security testing, performance testing, or load testing, you'll need to use other tools. The assistant is designed to test what a real user can see and interact with in the browser.
-
-**Media Content**
-
-Tests cannot interact with or validate video or audio content. The testing agent cannot play media files or interact with media players, so tests involving video playback or audio verification won't work.
-
-**Test Editing**
-
-The assistant cannot edit tests that were created in previous sessions. If you need to modify an existing test's steps, goal, or configuration, you'll need to use the platform UI to make those changes directly.
-
 ## Available Tools Reference
 
 The AI Chat agent has access to 20 specialized tools organized into these categories:
@@ -98,3 +79,7 @@ The AI Chat agent has access to 20 specialized tools organized into these catego
 </Note>
 
 You don't need to know which tools the assistant uses—just describe what you want to accomplish, and it will choose the right tools automatically.
+
+<Tip>
+**We're constantly improving:** Our AI agents and their capabilities are continuously evolving. We regularly add new tools and enhance existing ones to make the Chat Assistant even more powerful and helpful for your testing needs.
+</Tip>
