docs: fix title disambiguation and improve documentation structure
- Shorten site name to 'QA.tech Docs' for cleaner browser tabs
- Update introduction page title to 'Welcome to QA.tech' for better differentiation
- Remove manual H1 headings (Mintlify auto-generates from frontmatter)
- Enhance descriptions in frontmatter for better context
- Fix grammar: 'an Autonomous' (not 'a Autonomous')

This resolves the issue where introduction and creating-tests pages
appeared with similar/confusing titles. Mintlify automatically renders
the title from frontmatter as H1, so manual H1s created duplication.

Files modified:
- mint.json (site name)
- introduction.mdx (title, description, grammar)
- best-practices/creating-tests.mdx (description)
- api-reference/introduction.mdx (description)
- core-concepts/overview.mdx (description)
- best-practices/project-context.mdx (description)

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Introduction'
-description: 'Interact with QA.tech through our API'
+title: 'API Introduction'
+description: 'Learn how to interact with QA.tech programmatically using our REST API'
 ---
 
 ## Authentication
