--- a/best-practices/creating-tests.mdx
+++ b/best-practices/creating-tests.mdx
@@ -1,6 +1,7 @@
 ---
 title: Creating Tests
 icon: plus
+description: 'Learn how to create effective test cases in QA.tech and write tests that the AI agent can execute reliably.'
 ---
 
 ## What should be a test?
