--- a/best-practices/project-context.mdx
+++ b/best-practices/project-context.mdx
@@ -1,6 +1,7 @@
 ---
 title: Project Context
 icon: info
+description: 'Provide context to the AI agent about your application to improve test execution accuracy and reliability'
 ---
 
 <Note>
