--- a/core-concepts/overview.mdx
+++ b/core-concepts/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Overview
-description: QA.tech are approaching testing of web applications in a new way, this section covers the core concepts
+description: Understand the fundamental concepts that power QA.tech's AI-driven testing platform
 icon: rocket
 ---
 
