--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,9 +1,9 @@
 ---
-title: Introduction
-description: 'Welcome to QA.technical documentation'
+title: Welcome to QA.tech
+description: 'Get started with QA.tech - the Autonomous AI testing platform'
 ---
 
-QA.tech is a Autonomous AI testing platform - enabling you to get great test coverage without any manual labor.
+QA.tech is an Autonomous AI testing platform - enabling you to get great test coverage without any manual labor.
 
 <img
   className="block "
