--- a/best-practices/handle-auth.mdx
+++ b/best-practices/handle-auth.mdx
@@ -5,7 +5,13 @@ icon: key
 
 # Authentication Support for QA.tech
 
-QA.tech supports most common authentication setups. If your preferred authentication method isn’t listed below, let us know, and we’ll consider adding it to our roadmap.
+QA.tech supports most common authentication setups. If your preferred authentication method isn't listed below, let us know, and we'll consider adding it to our roadmap.
+
+<Warning>
+  **Security Notice: Use Test Credentials Only**
+  
+  Authentication credentials stored in [Configs](/core-concepts/configs) are **not encrypted** and are passed to AI language models during test execution. Always use dedicated test accounts—never real user credentials or production passwords.
+</Warning>
 
 ## Supported Authentication Methods
 
